<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Strings Creator</string>
    <string name="app_versionName">1.1</string>
    <string name="main_toolbar_title">Home</string>
    <string name="settings_toolbar_title">Settings</string>
    <string name="string_name">   String name</string>
    <string name="string_val">   String value</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="main_fab_text">New string</string>
    <string name="view_code">View Code</string>
    <string name="copy">Copy</string>
    <string name="sucess">Sucess!</string>
    <string name="more">More</string>
    <string name="copied">Copied</string>
    <string name="save_to_file">Save to file</string>
    <string name="perm_alert">Please accept permission firts!</string>
    <string name="delete_dialog_message">This option is not reversible</string>
    <string name="bottom_sheet_title">Select Action</string>
    <string name="edit">Edit</string>
    <string name="settings_resources_tag_title">Resources TAG</string>
    <string name="settings_resources_tag_description">Use Resources TAG in xml file</string>
    <string name="github_contributors">Github Contributors (Experimental)</string>
    <string name="github_issues">GitHub Issues</string>
</resources>