<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:gravity="center_vertical"
    android:padding="8dp"
    android:orientation="vertical"
    style="@style/Widget.Material3.BottomSheet">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/drag_handle" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="8dp"
        android:textSize="18sp"
        android:layout_marginTop="4dp"
        android:text="@string/bottom_sheet_title" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:icon="@drawable/ic_edit"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="?attr/materialButtonOutlinedStyle"
            app:iconGravity="textStart"
            android:id="@+id/edit"
            android:text="@string/edit" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:icon="@drawable/ic_delete"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="?attr/materialButtonOutlinedStyle"
            app:iconGravity="textStart"
            android:id="@+id/delete"
            android:text="@string/delete" />

    </LinearLayout>

</LinearLayout>
