<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:id="@+id/coordinator">

    <com.google.android.material.appbar.AppBarLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
         android:theme="@style/ThemeOverlay.Material3.ActionBar"
         android:id="@+id/appbar">

        <com.google.android.material.appbar.MaterialToolbar
             android:layout_height="?attr/actionBarSize"
             android:layout_width="match_parent"
             app:title="@string/settings_toolbar_title"
             app:popupTheme="@style/ThemeOverlay.Material3.Light"
             android:id="@+id/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         android:id="@+id/nested_scroll_view">

        <LinearLayout
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:padding="4dp">

            <com.google.android.material.card.MaterialCardView
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 app:rippleColor="#000000"
                 android:backgroundTint="@android:color/transparent"
                 app:cardCornerRadius="15dp">

                <LinearLayout
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:padding="8dp"
                     android:orientation="vertical">

                    <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         android:text="@string/settings_resources_tag_title" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                         android:layout_height="wrap_content"
                         android:layout_width="match_parent"
                         android:singleLine="true"
                        android:id="@+id/resourcesTag"
                         android:text="@string/settings_resources_tag_description" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>